feat: Support selecting multiple rule sets

--- a/frontend/src/assets/main.less
+++ b/frontend/src/assets/main.less
@@ -138,6 +138,10 @@ a {
   color: #fff;
 }
 
+.text-nowrap {
+  text-wrap: nowrap;
+}
+
 @keyframes rotate {
   from {
     transform: rotate(0deg);
