feat: Support sing-box v1.12.0

--- a/frontend/src/assets/main.less
+++ b/frontend/src/assets/main.less
@@ -69,12 +69,20 @@ a {
   display: flex;
 }
 
+.flex-col {
+  flex-direction: column;
+}
+
 .items-center {
   align-items: center;
 }
 
 .flex-start {
   align-items: flex-start;
+}
+
+.pt-4 {
+  padding-top: 4px !important;
 }
 
 .mt-4 {
